[package]
name = "distributed-bank-client"
version = "0.1.0"
authors = ["Kamil Jarosz <kjarosz@student.agh.edu.pl>"]
edition = "2018"

[dependencies]
clap = "<2.28.0"
thrift = "0.12.0"
ordered-float = "0.3.0"
try_from = "0.2.0"
md5 = "0.6.1"
distributed-bank-client-if = { path = "../distributed-bank-client-if" }
